--- a/DigitalDevice/app/src/main/res/layout/item_vehical.xml
+++ b/DigitalDevice/app/src/main/res/layout/item_vehical.xml
@@ -30,7 +30,7 @@
                 android:textStyle="bold" />
 
             <ImageView
-                android:id="@+id/imgAnh"
+                android:id="@+id/imgVehicle"
                 android:layout_width="match_parent"
                 android:layout_height="95dp"
                 android:layout_weight="1"
@@ -56,7 +56,7 @@
                         android:src="@drawable/lst1_safe" />
 
                     <TextView
-                        android:id="@+id/txtStatus"
+                        android:id="@+id/txtCondition"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -80,7 +80,7 @@
                         android:textSize="16sp" />
 
                     <TextView
-                        android:id="@+id/edtKm"
+                        android:id="@+id/txtKm"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
@@ -90,6 +90,8 @@
                 </LinearLayout>
 
                 <LinearLayout
+
+                    android:id="@+id/btnVehicleDetails"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
