--- a/DigitalDevice/app/src/main/res/layout/item_vehical.xml
+++ b/DigitalDevice/app/src/main/res/layout/item_vehical.xml
@@ -20,7 +20,7 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/txt_Ten"
+                android:id="@+id/txt_Name"
                 android:layout_width="match_parent"
                 android:layout_height="36dp"
                 android:gravity="center_vertical"
