fix map success

--- a/DigitalDevice/app/src/main/res/layout/vehicle_fragment.xml
+++ b/DigitalDevice/app/src/main/res/layout/vehicle_fragment.xml
@@ -20,7 +20,7 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:id="@+id/imgAdd"
+                android:id="@+id/imgBack"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_gravity="center"
