--- a/DigitalDevice/app/src/main/res/layout/item_vehical.xml
+++ b/DigitalDevice/app/src/main/res/layout/item_vehical.xml
@@ -5,12 +5,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="209dp"
+        android:layout_height="150dp"
         android:layout_gravity="center"
         android:layout_marginLeft="30dp"
         android:layout_marginTop="10dp"
         android:layout_marginRight="30dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="10dp"
         app:cardCornerRadius="12dp"
         app:cardElevation="8dp">
 
@@ -32,7 +32,7 @@
             <ImageView
                 android:id="@+id/imgVehicle"
                 android:layout_width="match_parent"
-                android:layout_height="95dp"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:src="@drawable/car" />
 
@@ -44,8 +44,8 @@
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
+                    android:layout_weight="0.5"
                     android:orientation="horizontal"
-                    android:layout_marginRight="20sp"
                     >
 
                     <ImageView
@@ -66,9 +66,9 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"
+                    android:layout_weight="0.5"
                     android:orientation="horizontal">
 
                     <TextView
@@ -106,16 +106,6 @@
                         android:background="@drawable/lst1_rounded_square"
                         android:backgroundTint="#F97316"
                         android:src="@drawable/lst1_arrow_right" />
-
-                    <TextView
-                        android:id="@+id/txtDetails"
-                        android:layout_width="wrap_content"
-                        android:layout_height="36dp"
-                        android:layout_marginLeft="10dp"
-                        android:layout_weight="1"
-                        android:gravity="center_vertical"
-                        android:text="Details"
-                        android:textStyle="normal|italic" />
                 </LinearLayout>
 
             </LinearLayout>
