--- a/DigitalDevice/app/src/main/res/layout/item_lamp.xml
+++ b/DigitalDevice/app/src/main/res/layout/item_lamp.xml
@@ -39,7 +39,7 @@
             android:layout_height="34dp"
             android:layout_gravity="end"
             android:layout_marginTop="4dp"
-            android:background="@drawable/custom_switch_track"
+            android:background="@drawable/custom_switch_init"
             android:thumbTint="#FFFFFF"
             android:trackTint="#00FFFFFF"
             app:layout_constraintEnd_toEndOf="parent"
@@ -49,8 +49,7 @@
             android:id="@+id/txtDeviceLampName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/nunito_light"
-            android:gravity="center"
+            android:fontFamily="@font/nunito_medium"
             android:text="Lamp 2"
             android:textColor="@color/black"
             android:textSize="15sp"
@@ -65,8 +64,7 @@
             android:id="@+id/txtDeviceLampCondition"
             android:layout_width="103dp"
             android:layout_height="wrap_content"
-            android:text="Devices On"
-            android:gravity="center"
+            android:text="Devices Off"
             android:textColor="#999"
             android:textSize="13sp"
             app:layout_constraintBottom_toBottomOf="@+id/imageView2"
