--- a/DigitalDevice/app/src/main/res/layout/dash_board_fragment.xml
+++ b/DigitalDevice/app/src/main/res/layout/dash_board_fragment.xml
@@ -49,9 +49,12 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="343dp"
-        android:layout_height="595dp"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
         android:orientation="vertical"
+        android:layout_marginRight="20dp"
+        android:layout_marginLeft="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/linearLayout"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout">
