--- a/DigitalDevice/app/src/main/res/layout/item_air.xml
+++ b/DigitalDevice/app/src/main/res/layout/item_air.xml
@@ -32,7 +32,7 @@
             android:layout_height="34dp"
             android:layout_gravity="end"
             android:layout_marginTop="4dp"
-            android:background="@drawable/custom_switch_track"
+            android:background="@drawable/custom_switch_init"
             android:thumbTint="#FFFFFF"
             android:trackTint="#00FFFFFF"
             app:layout_constraintEnd_toEndOf="parent"
@@ -46,7 +46,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="50dp"
-            android:fontFamily="@font/nunito_light"
+            android:fontFamily="@font/nunito_medium"
             android:text="Air Conditioner"
             android:textColor="@color/black"
             android:textSize="15sp"
@@ -99,7 +99,8 @@
             android:orientation="horizontal"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent">
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/mode">
 
             <Button
                 android:id="@+id/decrease_temp"
