--- a/DigitalDevice/app/src/main/res/values/colors.xml
+++ b/DigitalDevice/app/src/main/res/values/colors.xml
@@ -2,4 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="gray">#666262</color>
+    <color name="gray_black">#454343</color>
+    <color name="gray_light">#928E8E</color>
 </resources>
