--- a/DigitalDevice/app/src/main/res/values/themes.xml
+++ b/DigitalDevice/app/src/main/res/values/themes.xml
@@ -3,6 +3,10 @@
     <style name="Base.Theme.DigitalDevice" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="android:textColorHint">@color/gray</item>
+        <item name="searchIcon">@drawable/nhapid</item>
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">50%</item>
     </style>
 
     <style name="Theme.MyCustomTheme" parent="Theme.Material3.DayNight.NoActionBar">
