fix Viewpager -> navigation and fragment

--- a/DigitalDevice/app/src/main/res/layout/item_air.xml
+++ b/DigitalDevice/app/src/main/res/layout/item_air.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
-    android:layout_height="235sp"
+    android:layout_height="235dp"
     app:cardCornerRadius="16dp"
     app:cardElevation="4dp"
     android:layout_margin="4dp"
@@ -17,6 +17,7 @@
         android:padding="16dp">
 
         <!-- Icon -->
+        <!-- Toggle Switch -->
         <ImageView
             android:id="@+id/icon"
             android:layout_width="57dp"
@@ -25,7 +26,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <!-- Toggle Switch -->
         <Switch
             android:id="@+id/switch_Air"
             android:layout_width="51dp"
@@ -38,87 +38,90 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <!-- Device Name -->
-
-        <!-- Location -->
-        <TextView
-            android:id="@+id/txtDeviceAirName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="50dp"
-            android:fontFamily="@font/nunito_medium"
-            android:text="Air Conditioner"
-            android:textColor="@color/black"
-            android:textSize="15sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <!-- Temperature -->
-
-        <!-- Mode -->
-
-        <TextView
-            android:id="@+id/device_location"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Entrance"
-            android:fontFamily="@font/nunito_light"
-            android:textColor="#999"
-            android:textSize="14sp"
-            app:layout_constraintStart_toStartOf="@+id/txtDeviceAirName"
-            app:layout_constraintTop_toBottomOf="@+id/txtDeviceAirName" />
-
-        <TextView
-            android:id="@+id/txtDeviceAirTemperature"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:text="23°C"
-            android:textColor="#323131"
-            android:textSize="20sp"
-            app:layout_constraintStart_toStartOf="@+id/device_location"
-            app:layout_constraintTop_toBottomOf="@+id/device_location" />
-
-        <TextView
-            android:id="@+id/mode"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="2dp"
-            android:text="Mode: Auto"
-            android:textColor="#777"
-            android:textSize="10sp"
-            app:layout_constraintStart_toStartOf="@+id/txtDeviceAirTemperature"
-            app:layout_constraintTop_toBottomOf="@+id/txtDeviceAirTemperature" />
-
-        <!-- Temperature Controls -->
         <LinearLayout
-            android:layout_width="129dp"
-            android:layout_height="50dp"
-            android:gravity="center"
-            android:orientation="horizontal"
-            app:layout_constraintBottom_toBottomOf="parent"
+
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/mode">
+            app:layout_constraintStart_toStartOf="@+id/icon"
+            app:layout_constraintTop_toBottomOf="@+id/icon">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:paddingLeft="10dp"
+                >
+                <TextView
+                    android:id="@+id/txtDeviceAirName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/nunito"
+                    android:text="Air Conditioner"
+                    android:textColor="@color/black"
+                    android:textSize="15sp" />
 
-            <Button
-                android:id="@+id/decrease_temp"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_margin="5dp"
-                android:backgroundTint="#E0E0E0"
-                android:text="−"
-                android:textSize="15sp" />
+                <TextView
+                    android:id="@+id/device_location"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/nunito_light"
+                    android:text="Entrance"
+                    android:textColor="#999"
+                    android:textSize="14sp" />
 
-            <Button
-                android:id="@+id/increase_temp"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_margin="5dp"
-                android:backgroundTint="#E0E0E0"
-                android:text="+"
-                android:textSize="15dp" />
+                <TextView
+                    android:id="@+id/txtDeviceAirTemperature"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:text="23°C"
+                    android:textColor="#323131"
+                    android:textSize="20sp" />
+
+                <TextView
+                    android:id="@+id/mode"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="2dp"
+                    android:text="Mode: Auto"
+                    android:textColor="#777"
+                    android:textSize="10sp" />
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    >
+                    <LinearLayout
+                        android:id="@+id/linearLayout3"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:orientation="horizontal">
+
+                        <androidx.appcompat.widget.AppCompatButton
+                            android:id="@+id/decrease_temp"
+                            android:layout_width="40dp"
+                            android:layout_height="40dp"
+                            android:layout_marginRight="5dp"
+                            android:backgroundTint="#E0E0E0"
+                            android:text="−"
+                            android:textSize="15sp" />
+
+                        <androidx.appcompat.widget.AppCompatButton
+                            android:id="@+id/increase_temp"
+                            android:layout_width="40dp"
+                            android:layout_height="40dp"
+                            android:layout_marginLeft="5dp"
+                            android:backgroundTint="#E0E0E0"
+                            android:text="+"
+                            android:textSize="15dp" />
+                    </LinearLayout>
+                </LinearLayout>
+            </LinearLayout>
+
         </LinearLayout>
+
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
